[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "Cython>=3.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "multiemu"
version = "0.0.1"
description = "Work-in-progress retro machine emulator in Python and Cython"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Tobias"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
]

[project.scripts]
multiemu = "multiemu.cli:main"

[project.optional-dependencies]
frontend = [
    "pygame",
    "numpy",
]
