[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "Cython>=3.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "multiemu"
version = "0.1.2"
description = "Work-in-progress retro machine emulator in Python and Cython"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "Tobias Diaz", email = "tobias.diaz@uclm.es"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
]

[project.scripts]
multiemu = "multiemu.cli:main"

[project.optional-dependencies]
frontend = [
    "pygame",
    "numpy",
]
